<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.sma2.sma2.MainActivity">




    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"
        />


    <Spinner
        android:id="@+id/spinnerEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25sp"
        />


    <EditText
        android:id="@+id/time_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/tod"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEducation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorPrimary"
        />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_diagnosis"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/med_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/med_name"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/med_dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/med_dose"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/med_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/med_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/med_time"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/med_dose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorPrimary"
        />


    <Button
        android:id="@+id/button_continue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/med_time"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/back"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/med_time"
        app:layout_constraintLeft_toLeftOf="parent" />



</android.support.constraint.ConstraintLayout>