<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">



    <TextView
        android:id="@+id/textView_sched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/textview_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/scheduler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scheduler_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sched"
        android:layout_marginTop="20dp"

        >

        <RadioButton
            android:id="@+id/rbDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="20dp"
            android:text="@string/daily_exercises"
            android:textSize="@dimen/RadioButton_size"
            android:buttonTint="@color/colorPrimary"/>


        <RadioButton
            android:id="@+id/rbFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:checked="false"
            android:text="@string/full_exercises"
            android:textSize="@dimen/RadioButton_size"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/rbSpeech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:checked="false"
            android:text="@string/speech_exercises"
            android:textSize="@dimen/RadioButton_size"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/rbMov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/mov_exercises"
            android:textSize="@dimen/RadioButton_size"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/rbDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/demo_exercises"
            android:textSize="@dimen/RadioButton_size"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>


    <Button
        android:id="@+id/button_next_scheduler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2.5"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>