<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.sma2.sma2.MainActivity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="60sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:layout_marginTop="20sp"
        android:maxLines="2"
        android:lines="2"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/textView_total2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keep"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_total"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/button_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/results"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_total2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
